--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Movies Jankaari</title>
     <link rel="stylesheet" href="./p5_movies.css">
     <script src="./p5_movies.js" defer></script>
 </head>
